# MiniC-Compiler

./: .gitignore  CMakeLists.txt  Project 验收细则.md  README.md  ource_filename = main  token.l  tree.h
documents/: report.md  ~$设计展示.pptx  设计展示.pptx
src/: Emit.cpp  Emit.h  lex.yy.cc  main.cpp  makefile  parsing.cpp  parsing.hpp  parsing.y  token.l  tree.h  treenode.cpp  treenode.h
test/course/: course  course.bc  course.c  course.ll  course.s  linux-amd64
test/multiplication/: multi  multi.bc  multi.ll  multi.s  multiply.c
test/quicksort/: linux-amd64  quicksort.c
visualization/: AST.json  ast.html  ast.js  sample.json
wez_room/: array.ll  char.ll  course.ll  easy  easy.bc  easy.ll  easy.s  fun.c  function.ll  gets.ll  if.ll  ifelse.ll  multi  multi.bc  multi.ll  multi.s  print  print.bc  print.ll  print.s  quicksort  quicksort.bc  quicksort.ll  quicksort.s  quicksortnb.ll  scanf.ll  string.ll  while.ll
